Added database persistence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=devices_api
+
+server.port=8080 
+spring.datasource.url=jdbc:postgresql://localhost:5432/devices_api 
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update 
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Debugging options. TODO Disable before deploying
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
