Adding services and controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Debugging options. TODO Disable before deploying
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Customize the Swagger UI path (default: /swagger-ui.html)
+springdoc.swagger-ui.path=/api-docs
